--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
     padding: 0px;
     margin: 0px;
     font-family: 'Baloo Bhaina 2', cursive;
+    background: #42455a;
 }
 
 .container {
     width: 100%;
     height: 100%;
-    background: #42455a;
 }
 
 .menu ul {
@@ -40,4 +40,54 @@
     text-decoration: none;
     color: #fff;
     border: 2px solid transparent;
+    border-radius: 20px;
+    background-image: linear-gradient(#42455a, #42455a), radial-gradient(circle at topleft, #fd00da, #19d7f8);
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+}
+
+.signup-btn span {
+    display: block;
+    padding: 8px 22px;
+}
+
+.banner {
+    width: 80%;
+    height: 70%;
+    top: 25%;
+    left: 130px;
+    position: absolute;
+    color: #fff;
+}
+
+.app-text {
+    width: 50%;
+    float: left;
+}
+
+.app-text h1 {
+    font-size: 43px;
+    width: 640px;
+    position: relative;
+    margin-left: 40px;
+}
+
+.app-text p {
+    width: 650px;
+    font-size: 15px;
+    margin: 30px 0 30px 40px;
+    line-height: 25px;
+    color: #919191;
+}
+
+.app-picture {
+    width: 50%;
+    height: 10%;
+    float: right;
+}
+
+.app-picture img {
+    width: 80%;
+    margin-top: -20px;
+    padding-left: 50px;
 }
