--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
     color: #fff;
     border: 2px solid transparent;
     border-radius: 20px;
-    background-image: linear-gradient(#42455a, #42455a), radial-gradient(circle at topleft, #fd00da, #19d7f8);
+    background-image: linear-gradient(#42455a, #42455a), radial-gradient(circle at top left, #fd00da, #19d7f8);
     background-origin: border-box;
     background-clip: content-box, border-box;
 }
@@ -90,4 +90,53 @@
     width: 80%;
     margin-top: -20px;
     padding-left: 50px;
+}
+
+.play-btn {
+    margin-left: 40px;
+    display: inline-flex;
+}
+
+.play-btn-inner {
+    height: 50px;
+    width: 50px;
+    border: 8px solid transparent;
+    border-radius: 50%;
+    background-image: linear-gradient(#42455a, #42455a), radial-gradient(circle at top left, #fd00da, #19d7f8);
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+}
+
+.play-btn-inner img {
+    padding-top: 9px;
+    padding-left: 2px;
+    cursor: pointer;
+}
+
+small {
+    position: relative;
+    bottom: 18px;
+    cursor: pointer;
+    font-size: 18px;
+    color: #19dafa;
+    letter-spacing: 3px;
+}
+
+.quick-links {
+    left: 0;
+    bottom: 0;
+    position: absolute;
+    background: linear-gradient(to right, #db1bf6, #19d7f8);
+}
+
+.quick-links ul {
+    display: inline-flex;
+    margin: 25px auto;
+    text-align: center;
+}
+
+.quick-links ul li {
+    list-style-type: none;
+    margin: 0 50px;
+    cursor: pointer;
 }
