--- a/style.css
+++ b/style.css
@@ -1,142 +1,169 @@
-* {
-    padding: 0px;
-    margin: 0px;
-    font-family: 'Baloo Bhaina 2', cursive;
-    background: #42455a;
-}
-
-.container {
-    width: 100%;
-    height: 100%;
-}
-
-.menu ul {
-    display: inline-flex;
-    margin: 50px;
-}
-
-.menu ul li {
-    list-style-type: none;
-    margin: 0 20px;
-    padding: 2px;
-    color: #b2b1b1;
-    cursor: pointer;
-}
-
-.logo img {
-    width: 30px;
-    margin-top: -7px;
-    margin-right: 42px;
-}
-
-.active {
-    color: #19dafa !important;
-}
-
-.signup-btn {
-    top: 40px;
-    right: 80px;
-    position: absolute;
-    text-decoration: none;
-    color: #fff;
-    border: 2px solid transparent;
-    border-radius: 20px;
-    background-image: linear-gradient(#42455a, #42455a), radial-gradient(circle at top left, #fd00da, #19d7f8);
-    background-origin: border-box;
-    background-clip: content-box, border-box;
-}
-
-.signup-btn span {
-    display: block;
-    padding: 8px 22px;
-}
-
-.banner {
-    width: 80%;
-    height: 70%;
-    top: 25%;
-    left: 130px;
-    position: absolute;
-    color: #fff;
-}
-
-.app-text {
-    width: 50%;
-    float: left;
-}
-
-.app-text h1 {
-    font-size: 43px;
-    width: 640px;
-    position: relative;
-    margin-left: 40px;
-}
-
-.app-text p {
-    width: 650px;
-    font-size: 15px;
-    margin: 30px 0 30px 40px;
-    line-height: 25px;
-    color: #919191;
-}
-
-.app-picture {
-    width: 50%;
-    height: 10%;
-    float: right;
-}
-
-.app-picture img {
-    width: 80%;
-    margin-top: -20px;
-    padding-left: 50px;
-}
-
-.play-btn {
-    margin-left: 40px;
-    display: inline-flex;
-}
-
-.play-btn-inner {
-    height: 50px;
-    width: 50px;
-    border: 8px solid transparent;
-    border-radius: 50%;
-    background-image: linear-gradient(#42455a, #42455a), radial-gradient(circle at top left, #fd00da, #19d7f8);
-    background-origin: border-box;
-    background-clip: content-box, border-box;
-}
-
-.play-btn-inner img {
-    padding-top: 9px;
-    padding-left: 2px;
-    cursor: pointer;
-}
-
-small {
-    position: relative;
-    bottom: 18px;
-    cursor: pointer;
-    font-size: 18px;
-    color: #19dafa;
-    letter-spacing: 3px;
-}
-
-.quick-links {
-    left: 0;
-    bottom: 0;
-    position: absolute;
-    background: linear-gradient(to right, #db1bf6, #19d7f8);
-}
-
-.quick-links ul {
-    display: inline-flex;
-    margin: 25px auto;
-    text-align: center;
-}
-
-.quick-links ul li {
-    list-style-type: none;
-    margin: 0 50px;
-    cursor: pointer;
-}
+    * {
+        padding: 0px;
+        margin: 0px;
+        font-family: 'Baloo Bhaina 2', cursive;
+        background: #42455a;
+    }
+    
+    .container {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        overflow: hidden;
+        justify-content: center;
+    }
+    
+    .menu ul {
+        display: inline-flex;
+        margin: 50px;
+    }
+    
+    .menu ul li {
+        list-style-type: none;
+        margin: 0 20px;
+        padding: 2px;
+        color: #b2b1b1;
+        cursor: pointer;
+    }
+    
+    .logo img {
+        width: 30px;
+        margin-top: -7px;
+        margin-right: 42px;
+    }
+    
+    .active {
+        color: #19dafa !important;
+    }
+    
+    .signup-btn {
+        top: 40px;
+        right: 80px;
+        position: absolute;
+        text-decoration: none;
+        color: #fff;
+        border: 2px solid transparent;
+        border-radius: 20px;
+        background-image: linear-gradient(#42455a, #42455a), radial-gradient(circle at top left, #fd00da, #19d7f8);
+        background-origin: border-box;
+        background-clip: content-box, border-box;
+    }
+    
+    .signup-btn span {
+        display: block;
+        padding: 8px 22px;
+    }
+    
+    .banner {
+        width: 100%;
+        height: 70%;
+        top: 25%;
+        left: 130px;
+        position: absolute;
+        color: #fff;
+        display: flex;
+        align-content: space-around;
+        flex-wrap: wrap;
+    }
+    
+    .app-text {
+        /* width: 50%; */
+        float: left;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .app-text h1 {
+        font-size: 43px;
+        width: 640px;
+        position: relative;
+        margin-left: 40px;
+    }
+    
+    .app-text p {
+        width: 650px;
+        font-size: 15px;
+        margin: 30px 0 30px 40px;
+        line-height: 25px;
+        color: #919191;
+    }
+    
+    .app-picture {
+        /* background-repeat: no-repeat center; */
+        font-size: 25px;
+        width: 50%;
+        color: #fff;
+    }
+    
+    .app-picture img {
+        width: 80%;
+        margin-top: -20px;
+        padding-left: 50px;
+    }
+    
+    .play-btn {
+        margin-left: 40px;
+        display: inline-flex;
+    }
+    
+    .play-btn-inner {
+        height: 50px;
+        width: 50px;
+        border: 8px solid transparent;
+        border-radius: 50%;
+        background-image: linear-gradient(#42455a, #42455a), radial-gradient(circle at top left, #fd00da, #19d7f8);
+        background-origin: border-box;
+        background-clip: content-box, border-box;
+    }
+    
+    .play-btn-inner img {
+        padding-top: 9px;
+        padding-left: 5px;
+        cursor: pointer;
+    }
+    
+    small {
+        position: relative;
+        bottom: 18px;
+        cursor: pointer;
+        font-size: 18px;
+        color: #19dafa;
+        letter-spacing: 3px;
+    }
+    
+    .quick-links {
+        left: 0;
+        bottom: 0;
+        position: absolute;
+        background: linear-gradient(to right, #db1bf6, #19d7f8);
+    }
+    
+    .quick-links ul {
+        display: inline-flex;
+        margin: 25px auto;
+        text-align: center;
+    }
+    
+    .quick-links ul li {
+        list-style-type: none;
+        margin: 0 50px;
+        cursor: pointer;
+    }
+    
+    .quick-lines ul li .fa {
+        font-size: 25px;
+        color: #fff;
+    }
+    
+    .quick-lines ul li p {
+        margin-top: 15px;
+        font-size: 10px;
+        color: #fff;
+    }
+    
+    @media only screen(max-width:1380px) {
+        .quick-lines {
+            display: none;
+        }
+    }
